--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
 }
 
 nav{
-    
+    overflow:scroll;
     background-color: black;
     
     color: white;
@@ -53,7 +53,7 @@ nav img{
 background-position: center;
 background-attachment: fixed;
 
-background-image: url(/img/camera-1130731_1920.jpg);
+background-image: url(img/camera-1130731_1920.jpg);
 height: 600px;
 display: flex;
 justify-content: center;
