--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav img{
 background-position: center;
 background-attachment: fixed;
 
-background-image: url(/img/camera-1130731_1920.jpg);
+background-image: url(camera-1130731_1920.jpg);
 height: 600px;
 display: flex;
 justify-content: center;
