--- a/style.css
+++ b/style.css
@@ -168,3 +168,21 @@ footer{
 .footersm{
     width: 10%;
 }
+.resume img{
+    height: 1200px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+
+}
+.resume{
+
+    border: 5px solid black;
+    /* padding: 10px;
+     */
+     margin: 10px;
+}
+.resume h1{
+    text-align: center;
+}
